--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <!--<artifactId>jackson-core</artifactId>-->
             <!--<version>2.6.0</version>-->
         <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+            <!--<artifactId>jackson-databind</artifactId>-->
+            <!--<version>2.6.0</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -93,8 +98,8 @@
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.6.0</version>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.7</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
