--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>4.0.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>4.1.7.RELEASE</version>
+        </dependency>
 
 
     </dependencies>
